@@ -15,6 +15,7 @@
 - Fix calculations using field_search with has_many includes
 - Add support to ActiveScaffold.create_record_row to insert after or before of an element
 - Add support for dynamic action group
+- Add support for class prefix on human condition helpers
 
 = 3.2.17 (not released yet)
 - fix constraints for columns with multiple columns in search_sql
